# ratbox-mirror

./: BUGS  CREDITS  CVS-Access  ChangeLog  ChangeLog.2.bz2  INSTALL  Makefile.am  Makefile.in  README.FIRST  RELNOTES  SVN-Access  acinclude.m4  aclocal.m4  configure  configure.ac  install-mod.sh.in  main.c
adns/: Makefile.am  Makefile.in  adns.h  check.c  event.c  general.c  internal.h  parse.c  query.c  reply.c  setup.c  transmit.c  types.c
bandb/: Makefile.am  Makefile.in  bandb.c  bantool.c  bantool.h  rsdb.h  rsdb_snprintf.c  rsdb_sqlite3.c
bandb/sqlite3/: Makefile.in  sqlite3.c
contrib/: Makefile.am  Makefile.in  README  example_module.c  ircd-shortcut.pl  m_42.c  m_certfp.c  m_chghost.c  m_clearchan.c  m_flags.c  m_force.c  m_mallinfo.c  m_mkpasswd.c  m_oaccept.c  m_ojoin.c  m_okick.c  m_olist.c  m_opme.c  m_reportssl.c  m_webirc.c  spy_admin_notice.c  spy_info_notice.c  spy_links_notice.c  spy_motd_notice.c  spy_stats_notice.c  spy_stats_p_notice.c  spy_trace_notice.c  spy_whois_notice.c  spy_whois_notice_global.c
doc/: Makefile.in  challenge.txt  collision_fnc.txt  example.conf  example.efnet.conf  genopercert.sh  genssl.sh  index.txt  ircd-ratbox.init  ircd_crontab.sh  modes.txt  monitor.txt  ratbox-rotate.sh  services.txt  whats-new-3.0.txt  whats-new-3.1.txt
doc/technical/: ts6.txt
help/: Makefile.am  Makefile.in
help/opers/: adminresv  adminwall  challenge  cmode  dline  index  kline  masktrace  operspy  resv  testmask  testmaskgecos  umode  unresv  xline
help/users/: cmode  umode
ident/: Makefile.am  Makefile.in  ident.c
include/: banconf.h  bandb_defs.h  bandbi.h  cache.h  channel.h  class.h  client.h  common.h  config.h  config.h.dist  defaults.h  dns.h  hash.h  hook.h  hostmask.h  ipv4_from_ipv6.h  irc_string.h  ircd.h  ircd_defs.h  ircd_getopt.h  ircd_signal.h  listener.h  m_info.h  match.h  messages.h  modules.h  monitor.h  newconf.h  numeric.h  operhash.h  packet.h  parse.h  patchlevel.h  patricia.h  reject.h  s_auth.h  s_conf.h  s_gline.h  s_log.h  s_newconf.h  (+16 more)
libircd/: Makefile.am  Makefile.in  balloc.c  balloc.h  commio.c  commio.h  crypt.c  devpoll.c  epoll.c  event.c  event.h  helper.c  helper.h  ircd_lib.c  ircd_lib.h  ircd_memory.c  ircd_memory.h  kqueue.c  linebuf.c  linebuf.h  poll.c  ports.c  select.c  sigio.c  snprintf.c  snprintf.h  tools.c  tools.h  unix.c  win32.c
libltdl/: Makefile.am  Makefile.in  ltmain.sh
libltdl/loaders/.deps/: dlopen.Plo  libltdlc_la-preopen.Plo
modules/: Makefile.am  Makefile.in  m_accept.c  m_admin.c  m_adminwall.c  m_away.c  m_cap.c  m_capab.c  m_challenge.c  m_close.c  m_cmessage.c  m_connect.c  m_dline.c  m_encap.c  m_etrace.c  m_gline.c  m_gungline.c  m_help.c  m_info.c  m_invite.c  m_ison.c  m_kline.c  m_knock.c  m_links.c  m_list.c  m_locops.c  m_lusers.c  m_map.c  m_monitor.c  m_motd.c  m_names.c  m_oper.c  m_operspy.c  m_pass.c  m_ping.c  m_pong.c  m_post.c  m_rehash.c  m_restart.c  m_resv.c  (+22 more)
modules/core/: Makefile.am  Makefile.in  m_die.c  m_error.c  m_join.c  m_kick.c  m_kill.c  m_message.c  m_mode.c  m_nick.c  m_part.c  m_quit.c  m_server.c  m_squit.c
resolver/: Makefile.am  Makefile.in  getaddrinfo.c  getnameinfo.c  res.c  res.h  reslib.c  reslib.h  reslist.c  resolver.c
resolver/adns/: Makefile.am  Makefile.in  adns.h  check.c  general.c  internal.h  query.c  transmit.c  types.c
servlink/: Makefile.am  Makefile.in  control.c  io.c  servlink.c
sqlite3/: Makefile.am  Makefile.in  sqlite3.pc
src/: Makefile.am  Makefile.in  banconf.c  bandbi.c  blacklist.c  cache.c  channel.c  class.c  client.c  dns.c  getopt.c  hash.c  hook.c  hostmask.c  ident.c  ipv4_from_ipv6.c  irc_string.c  ircd.c  ircd_lexer.c  ircd_lexer.l  ircd_parser.c  ircd_parser.h  ircd_parser.y  ircd_signal.c  kdparse.c  listener.c  main.c  match.c  messages.tab  modules.c  monitor.c  newconf.c  numeric.c  operhash.c  packet.c  parse.c  patricia.c  reject.c  resolver.c  restart.c  (+16 more)
src/ident/: Makefile.in  ident.c
src/resolver/: Makefile.am  Makefile.in  resolver.c
ssld/: Makefile.am  Makefile.in  ssld.c
tools/: Makefile.am  Makefile.in  README  bantool.pl  ircd_crontab.sh.in  mkpasswd.c
tools/rsa_respond/: respond.c
