# $Id$

AUTOMAKE_OPTIONS = foreign

prefix          = @prefix@
modulesdir       = @moduledir@/autoload


INSTALL         = @INSTALL@
INSTALL_PROGRAM = @INSTALL_PROGRAM@

INCLUDES = -I../include -I../libircd $(INCLTDL)

SUBDIRS = core

m_accept_la_LDFLAGS =  -module -avoid-version  ../src/libratbox.la
m_admin_la_LDFLAGS =  -module -avoid-version  ../src/libratbox.la
m_away_la_LDFLAGS =  -module -avoid-version  ../src/libratbox.la
m_capab_la_LDFLAGS =  -module -avoid-version  ../src/libratbox.la
m_cap_la_LDFLAGS =  -module -avoid-version  ../src/libratbox.la
m_close_la_LDFLAGS =  -module -avoid-version  ../src/libratbox.la
m_cmessage_la_LDFLAGS =  -module -avoid-version  ../src/libratbox.la
m_connect_la_LDFLAGS =  -module -avoid-version  ../src/libratbox.la
m_dline_la_LDFLAGS =  -module -avoid-version  ../src/libratbox.la
m_encap_la_LDFLAGS =  -module -avoid-version  ../src/libratbox.la
m_etrace_la_LDFLAGS =  -module -avoid-version  ../src/libratbox.la
m_gline_la_LDFLAGS =  -module -avoid-version  ../src/libratbox.la
m_help_la_LDFLAGS =  -module -avoid-version  ../src/libratbox.la
m_info_la_LDFLAGS =  -module -avoid-version  ../src/libratbox.la
m_invite_la_LDFLAGS =  -module -avoid-version  ../src/libratbox.la
m_ison_la_LDFLAGS =  -module -avoid-version  ../src/libratbox.la
m_kline_la_LDFLAGS =  -module -avoid-version  ../src/libratbox.la
m_knock_la_LDFLAGS =  -module -avoid-version  ../src/libratbox.la
m_links_la_LDFLAGS =  -module -avoid-version  ../src/libratbox.la
m_list_la_LDFLAGS =  -module -avoid-version  ../src/libratbox.la
m_locops_la_LDFLAGS =  -module -avoid-version  ../src/libratbox.la
m_lusers_la_LDFLAGS =  -module -avoid-version  ../src/libratbox.la
m_map_la_LDFLAGS =  -module -avoid-version  ../src/libratbox.la
m_monitor_la_LDFLAGS =  -module -avoid-version  ../src/libratbox.la
m_motd_la_LDFLAGS =  -module -avoid-version  ../src/libratbox.la
m_names_la_LDFLAGS =  -module -avoid-version  ../src/libratbox.la
m_oper_la_LDFLAGS =  -module -avoid-version  ../src/libratbox.la
m_operspy_la_LDFLAGS =  -module -avoid-version  ../src/libratbox.la
m_pass_la_LDFLAGS =  -module -avoid-version  ../src/libratbox.la
m_ping_la_LDFLAGS =  -module -avoid-version  ../src/libratbox.la
m_pong_la_LDFLAGS =  -module -avoid-version  ../src/libratbox.la
m_post_la_LDFLAGS =  -module -avoid-version  ../src/libratbox.la
m_rehash_la_LDFLAGS =  -module -avoid-version  ../src/libratbox.la
m_restart_la_LDFLAGS =  -module -avoid-version  ../src/libratbox.la
m_resv_la_LDFLAGS =  -module -avoid-version  ../src/libratbox.la
m_services_la_LDFLAGS =  -module -avoid-version  ../src/libratbox.la
m_set_la_LDFLAGS =  -module -avoid-version  ../src/libratbox.la
m_stats_la_LDFLAGS =  -module -avoid-version  ../src/libratbox.la
m_svinfo_la_LDFLAGS =  -module -avoid-version  ../src/libratbox.la
m_tb_la_LDFLAGS =  -module -avoid-version  ../src/libratbox.la
m_testline_la_LDFLAGS =  -module -avoid-version  ../src/libratbox.la
m_testmask_la_LDFLAGS =  -module -avoid-version  ../src/libratbox.la
m_time_la_LDFLAGS =  -module -avoid-version  ../src/libratbox.la
m_topic_la_LDFLAGS =  -module -avoid-version  ../src/libratbox.la
m_trace_la_LDFLAGS =  -module -avoid-version  ../src/libratbox.la
m_unreject_la_LDFLAGS =  -module -avoid-version  ../src/libratbox.la
m_user_la_LDFLAGS =  -module -avoid-version  ../src/libratbox.la
m_userhost_la_LDFLAGS =  -module -avoid-version  ../src/libratbox.la
m_users_la_LDFLAGS =  -module -avoid-version  ../src/libratbox.la
m_version_la_LDFLAGS =  -module -avoid-version  ../src/libratbox.la
m_wallops_la_LDFLAGS =  -module -avoid-version  ../src/libratbox.la
m_who_la_LDFLAGS =  -module -avoid-version  ../src/libratbox.la
m_whois_la_LDFLAGS =  -module -avoid-version  ../src/libratbox.la
m_whowas_la_LDFLAGS =  -module -avoid-version  ../src/libratbox.la
m_xline_la_LDFLAGS =  -module -avoid-version  ../src/libratbox.la

m_accept_la_SOURCES =	m_accept.c
m_admin_la_SOURCES =	m_admin.c
m_away_la_SOURCES =	m_away.c
m_capab_la_SOURCES =	m_capab.c
m_cap_la_SOURCES =	m_cap.c
m_close_la_SOURCES =	m_close.c
m_cmessage_la_SOURCES =	m_cmessage.c
m_connect_la_SOURCES =	m_connect.c
m_dline_la_SOURCES =	m_dline.c
m_encap_la_SOURCES =	m_encap.c
m_etrace_la_SOURCES =	m_etrace.c
m_gline_la_SOURCES =	m_gline.c
m_help_la_SOURCES =	m_help.c
m_info_la_SOURCES =	m_info.c
m_invite_la_SOURCES =	m_invite.c
m_ison_la_SOURCES =	m_ison.c
m_kline_la_SOURCES =	m_kline.c
m_knock_la_SOURCES =	m_knock.c
m_links_la_SOURCES =	m_links.c
m_list_la_SOURCES =	m_list.c
m_locops_la_SOURCES =	m_locops.c
m_lusers_la_SOURCES =	m_lusers.c
m_map_la_SOURCES =	m_map.c
m_monitor_la_SOURCES =	m_monitor.c
m_motd_la_SOURCES =	m_motd.c
m_names_la_SOURCES =	m_names.c
m_oper_la_SOURCES =	m_oper.c
m_operspy_la_SOURCES =	m_operspy.c
m_pass_la_SOURCES =	m_pass.c
m_ping_la_SOURCES =	m_ping.c
m_pong_la_SOURCES =	m_pong.c
m_post_la_SOURCES =	m_post.c
m_rehash_la_SOURCES =	m_rehash.c
m_restart_la_SOURCES =	m_restart.c
m_resv_la_SOURCES =	m_resv.c
m_services_la_SOURCES =	m_services.c
m_set_la_SOURCES =	m_set.c
m_stats_la_SOURCES =	m_stats.c
m_svinfo_la_SOURCES =	m_svinfo.c
m_tb_la_SOURCES =	m_tb.c
m_testline_la_SOURCES =	m_testline.c
m_testmask_la_SOURCES =	m_testmask.c
m_time_la_SOURCES =	m_time.c
m_topic_la_SOURCES =	m_topic.c
m_trace_la_SOURCES =	m_trace.c
m_unreject_la_SOURCES =	m_unreject.c
m_user_la_SOURCES =	m_user.c
m_userhost_la_SOURCES =	m_userhost.c
m_users_la_SOURCES =	m_users.c
m_version_la_SOURCES =	m_version.c
m_wallops_la_SOURCES =	m_wallops.c
m_who_la_SOURCES =	m_who.c
m_whois_la_SOURCES =	m_whois.c
m_whowas_la_SOURCES =	m_whowas.c
m_xline_la_SOURCES =	m_xline.c

EXTRA_LTLIBRARIES = m_services.la

modules_LTLIBRARIES = @M_SERVICES@ \
m_accept.la	\
m_admin.la	\
m_away.la	\
m_capab.la	\
m_cap.la	\
m_close.la	\
m_cmessage.la	\
m_connect.la	\
m_dline.la	\
m_encap.la	\
m_etrace.la	\
m_gline.la	\
m_help.la	\
m_info.la	\
m_invite.la	\
m_ison.la	\
m_kline.la	\
m_knock.la	\
m_links.la	\
m_list.la	\
m_locops.la	\
m_lusers.la	\
m_map.la	\
m_monitor.la	\
m_motd.la	\
m_names.la	\
m_oper.la	\
m_operspy.la	\
m_pass.la	\
m_ping.la	\
m_pong.la	\
m_post.la	\
m_rehash.la	\
m_restart.la	\
m_resv.la	\
m_set.la	\
m_stats.la	\
m_svinfo.la	\
m_tb.la		\
m_testline.la	\
m_testmask.la	\
m_time.la	\
m_topic.la	\
m_trace.la	\
m_unreject.la	\
m_user.la	\
m_userhost.la	\
m_users.la	\
m_version.la	\
m_wallops.la	\
m_who.la	\
m_whois.la	\
m_whowas.la	\
m_xline.la	


